@@ -221,7 +221,6 @@ extern int cl_build(struct cl_engine *engine);
 extern void cl_free(struct cl_engine *engine);
 
 extern const char *cl_strerror(int clerror);
-extern const char *cl_perror(int clerror); /* deprecated */
 
 #ifdef __cplusplus
 }
